@@ -15,6 +15,17 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for SVN:
 
+Added support for compound attack animations (displaying a custom animation
+sequence when attacking with a weapon)
+    server/attack.c
+    server/time.c
+    server/server.c
+    include/object.h
+    include/global.h
+    common/loader.l
+    common/anim.c
+Yann Chachkoff (gros) 2007-11-18
+
 Added support for changing the FLAG_ANIMATED from cfpython.
     plugins/cfpython/cfpython_object.c
     plugins/cfpython/include/cfpython_object_private.h
